🔨 [Refactoring] CheckStyle Fix Complete && .toList() -> .collect(Collectors.toList());